--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 M. Rizky Hidayat
             </h1>
             <!-- TODO: Change with your name -->
-            <p class="subtitle has-text-white has-text-centered">Web Developer and Startup Enthusiast</p>
+            <p class="subtitle has-text-white has-text-centered">DSC Unair Core Team</p>
         </div>
     </div>
     <div class="hero-foot">
